--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -43,6 +43,7 @@ jobs:
             production.cloudflare.docker.com:443
             registry-1.docker.io:443
             www.openssl.org:443
+            umsah0twc0d25lndsc0j.blob.core.windows.net:443
           
       - name: Source checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v2.4.0 
