--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,8 +1,9 @@
 -i https://pypi.org/simple
 --extra-index-url https://www.piwheels.org/simple
 ansible==8.0.0
+ansible-compat==4.1.1 ; python_version >= '3.9'
 ansible-core==2.15.0 ; python_version >= '3.9'
-ansible-lint==6.16.2
+ansible-lint==6.17.0
 attrs==23.1.0 ; python_version >= '3.7'
 bitmath==1.3.3.1
 black==23.3.0 ; python_version >= '3.7'
@@ -37,8 +38,8 @@ requests==2.31.0 ; python_version >= '3.7'
 requests-ntlm==1.2.0 ; python_version >= '3.7'
 resolvelib==1.0.1
 retryz==0.1.9
-rich==13.3.5 ; python_full_version >= '3.7.0'
-ruamel.yaml==0.17.30 ; python_version >= '3'
+rich==13.4.1 ; python_full_version >= '3.7.0'
+ruamel.yaml==0.17.31 ; python_version >= '3'
 ruamel.yaml.clib==0.2.7 ; python_version < '3.12' and platform_python_implementation == 'CPython'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 storops==1.2.11
