--- a/.github/workflows/netmaker.yml
+++ b/.github/workflows/netmaker.yml
@@ -42,6 +42,7 @@ jobs:
             production.cloudflare.docker.com:443
             proxy.golang.org:443
             registry-1.docker.io:443
+            storage.googleapis.com:443
           
       - name: Source checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v2.4.0 
