--- a/.github/workflows/rustybgp.yml
+++ b/.github/workflows/rustybgp.yml
@@ -37,6 +37,7 @@ jobs:
             dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
+            index.crates.io:443
             production.cloudflare.docker.com:443
             registry-1.docker.io:443
             sh.rustup.rs:443
