--- a/.github/workflows/zola.yml
+++ b/.github/workflows/zola.yml
@@ -40,6 +40,7 @@ jobs:
             dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
+            index.crates.io:443
             production.cloudflare.docker.com:443
             rdfepirv2by3prdstr02.blob.core.windows.net:443
             registry-1.docker.io:443
