--- a/.github/workflows/cf-warp.yml
+++ b/.github/workflows/cf-warp.yml
@@ -88,7 +88,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           context: ${{ github.workflow }}
           #platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
-          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
+          platforms: linux/amd64,linux/arm64,linux/ppc64le
           build-args: |
             BUILD_VERSION
           sbom: true
