--- a/.github/workflows/coredns.yml
+++ b/.github/workflows/coredns.yml
@@ -45,6 +45,7 @@ jobs:
             storage.googleapis.com:443
             sum.golang.org:443
             umsazdwrbtwl1lrz1nn4.blob.core.windows.net:443
+            umsavwvp5bvh2p2khhwz.blob.core.windows.net:443
           
       - name: Source checkout
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v2.4.0 
