--- a/nginx-distroless/Dockerfile.stable
+++ b/nginx-distroless/Dockerfile.stable
@@ -1,4 +1,4 @@
-FROM nginx:1.25.1@sha256:593dac25b7733ffb7afe1a72649a43e574778bf025ad60514ef40f6b5d606247 AS base
+FROM nginx:1.24.0@sha256:a8281ce42034b078dc7d88a5bfe6d25d75956aad9abba75150798b90fa3d1010 AS base
 
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 ARG TIME_ZONE
@@ -16,7 +16,7 @@ RUN mkdir -p /opt/var/cache/nginx && \
     cp -a --parents /usr/sbin/nginx /opt && \
     cp -a --parents /usr/sbin/nginx-debug /opt && \
     cp -a --parents /lib/$(uname -m)-linux-gnu/ld-* /opt && \
-    cp -a --parents /lib/$(uname -m)-linux-gnu/libpcre.so.* /opt && \
+    cp -a --parents /lib/$(uname -m)-linux-gnu/libpcre* /opt && \
     cp -a --parents /lib/$(uname -m)-linux-gnu/libz.so.* /opt && \
     cp -a --parents /lib/$(uname -m)-linux-gnu/libc* /opt && \
     cp -a --parents /lib/$(uname -m)-linux-gnu/libdl* /opt && \
