--- a/yt-dlp/Dockerfile
+++ b/yt-dlp/Dockerfile
@@ -15,6 +15,7 @@ RUN set -x \
         dumb-init \
         ffmpeg \
         python3 \
+        py3-mutagen \
     # Install youtube-dl
  && curl -Lo /usr/local/bin/yt-dlp https://github.com/yt-dlp/yt-dlp/releases/download/${BUILD_VERSION}/yt-dlp \
  #&& curl -Lo SHA2-256SUMS https://github.com/yt-dlp/yt-dlp/releases/download/${BUILD_VERSION}/SHA2-256SUMS \
