--- a/docker-autocompose/requirements.txt
+++ b/docker-autocompose/requirements.txt
@@ -1,15 +1,15 @@
 -i https://pypi.org/simple
 --extra-index-url https://www.piwheels.org/simple
-certifi==2023.5.7 ; python_version >= '3.6'
-charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
+certifi==2023.5.7; python_version >= '3.6'
+charset-normalizer==3.1.0; python_full_version >= '3.7.0'
 docker==6.1.3
--e git+https://github.com/jauderho/docker-autocompose.git@5317ee71ecef7a14118a5f9dd101fe446e0df9c3#egg=docker-autocompose
-idna==3.4 ; python_version >= '3.5'
+docker-autocompose @ git+https://github.com/jauderho/docker-autocompose.git@5317ee71ecef7a14118a5f9dd101fe446e0df9c3
+idna==3.4; python_version >= '3.5'
 packaging==21.3
 pyaml==23.5.9
-pyparsing==3.1.0 ; python_full_version >= '3.6.8'
-pyyaml==6.0 ; python_version >= '3.6'
-requests==2.31.0 ; python_version >= '3.7'
+pyparsing==3.1.0; python_full_version >= '3.6.8'
+pyyaml==6.0; python_version >= '3.6'
+requests==2.31.0; python_version >= '3.7'
 six==1.16.0
-urllib3==2.0.3 ; python_version >= '3.7'
-websocket-client==1.6.1 ; python_version >= '3.7'
+urllib3==2.0.3; python_version >= '3.7'
+websocket-client==1.6.1; python_version >= '3.7'
