--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -12,12 +12,13 @@ cachez==0.1.2
 certifi==2023.5.7; python_version >= '3.6'
 cffi==1.15.1
 charset-normalizer==3.1.0; python_full_version >= '3.7.0'
-click==8.1.3; python_version >= '3.7'
+click==8.1.4; python_version >= '3.7'
 cryptography==41.0.1; python_version >= '3.7'
 filelock==3.12.2; python_version >= '3.7'
 idna==3.4; python_version >= '3.5'
 jinja2==3.1.2; python_version >= '3.7'
-jsonschema==4.17.3; python_version >= '3.7'
+jsonschema==4.18.0; python_version >= '3.8'
+jsonschema-specifications==2023.6.1; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.3; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
@@ -26,19 +27,20 @@ mypy-extensions==1.0.0; python_version >= '3.5'
 packaging==23.1; python_version >= '3.7'
 pathspec==0.11.1; python_version >= '3.7'
 persist-queue==0.8.1
-platformdirs==3.8.0; python_version >= '3.7'
+platformdirs==3.8.1; python_version >= '3.7'
 pycparser==2.21
 pygments==2.15.1; python_version >= '3.7'
-pyrsistent==0.19.3; python_version >= '3.7'
 pyspnego==0.9.1; python_version >= '3.7'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
 pyyaml==6.0; python_version >= '3.6'
+referencing==0.29.1; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
 resolvelib==1.0.1
 retryz==0.1.9
 rich==13.4.2; python_full_version >= '3.7.0'
+rpds-py==0.8.8; python_version >= '3.8'
 ruamel.yaml==0.17.32; python_version >= '3'
 ruamel.yaml.clib==0.2.7; python_version < '3.12' and platform_python_implementation == 'CPython'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
