--- a/.github/workflows/vegeta.yml
+++ b/.github/workflows/vegeta.yml
@@ -12,7 +12,7 @@ on:
     - cron: "0 8 * * 1"
 
 env:
-  BUILD_VERSION: "v12.10.0"
+  BUILD_VERSION: "git"
   DOCKER_CLI_EXPERIMENTAL: enabled
   REPOSITORY: ${{ github.actor }}/${{ github.workflow }} 
 
