--- a/.github/workflows/amass.yml
+++ b/.github/workflows/amass.yml
@@ -42,6 +42,7 @@ jobs:
             production.cloudflare.docker.com:443
             proxy.golang.org:443
             registry-1.docker.io:443
+            storage.googleapis.com:443
             zrdfepirv2dz5prdstr11a.blob.core.windows.net:443
           
       - name: Source checkout
