--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -11,7 +11,7 @@ bracex==2.4; python_version >= '3.8'
 cachez==0.1.2
 certifi==2023.7.22; python_version >= '3.6'
 cffi==1.16.0; python_version >= '3.8'
-charset-normalizer==3.3.1; python_full_version >= '3.7.0'
+charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 cryptography==41.0.5; python_version >= '3.7'
 filelock==3.13.1; python_version >= '3.8'
@@ -33,7 +33,7 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.10.2; python_version >= '3.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version >= '3.6'
+pyyaml==6.0.1; python_version != '3.4'
 referencing==0.30.2; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
