--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -33,7 +33,7 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.10.2; python_version >= '3.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version >= '3.6'
+pyyaml==6.0.1; python_version != '3.4'
 referencing==0.30.2; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
@@ -46,7 +46,7 @@ ruamel.yaml.clib==0.2.8; python_version < '3.13' and platform_python_implementat
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 storops==1.2.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 subprocess-tee==0.4.1; python_version >= '3.8'
-urllib3==2.0.7; python_version >= '3.7'
+urllib3==2.1.0; python_version >= '3.8'
 wcmatch==8.5; python_version >= '3.8'
 wheel==0.41.3; python_version >= '3.7'
 xmltodict==0.13.0; python_version >= '3.4'
