--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -17,7 +17,7 @@ cryptography==41.0.5; python_version >= '3.7'
 filelock==3.13.1; python_version >= '3.8'
 idna==3.4; python_version >= '3.5'
 jinja2==3.1.2; python_version >= '3.7'
-jsonschema==4.19.2; python_version >= '3.8'
+jsonschema==4.20.0; python_version >= '3.8'
 jsonschema-specifications==2023.11.1; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.3; python_version >= '3.7'
@@ -33,7 +33,7 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.10.2; python_version >= '3.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version >= '3.6'
+pyyaml==6.0.1; python_version != '3.4'
 referencing==0.31.0; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
